# 2048

./: .gitignore  2048.html  2048.js  Cargo.toml  README.md  app.js
assets/: game.mov
game/: Cargo.toml
game/src/: board.rs  main.rs
src/: board.rs  main.rs
static/: 2048.css  2048.html  2048.js
